--- a/style.css
+++ b/style.css
@@ -15,7 +15,72 @@
     --white-color: #fff;
     --hero-color: black;
 }
+#work-row{
+    padding-left: 135px;
+    padding-right: 135px;
+    width:100vw;
+}
+.work-hero{
+    /* border:2px solid #444; */
+    border-radius: 10px;
+    /* box-shadow: 0px 0px 5px #444; */
+    width:90%;
+}
+.work-des{
+    padding-top:40px;
 
+}
+.work-des h1{
+    font-weight: bold;
+}
+.work-des p{
+    text-align: justify;
+    font-weight: 100;
+}
+.work-hero-img{
+    width: 100%;
+    border-radius: 10px;
+}
+.technologies h2{
+    font-size: 0.8em;
+    font-weight: bold;
+}
+.tech-stack{
+    cursor: pointer;
+    margin-right: 10px;
+    background: #f2f2f2;
+    padding:2px 4px;
+    font-size: 0.8em;
+    transition: background 1s;
+}
+.tech-stack:hover{
+    background: beige;
+}
+.featured{
+    margin-top:10px;
+}
+.partners{
+    /* background:#f2f2f2; */
+    height:50px;
+    margin-right: 20px;
+}
+#partner-logo{
+    height:40px;
+    cursor: pointer;
+    transition: all 1s;
+}
+#partner-logo:hover{
+    box-shadow: 0px 0px 10px #444;
+}
+.work-read{
+    float:right;
+    font-size: 0.8em;
+}
+.work-read:hover{
+    background: #444;
+    color:white!important;
+    border:2px solid #444!important;
+}
 body {
     font-family: 'Poppins', sans-serif;
     color: var(--light-text-color);
@@ -537,7 +602,13 @@ li span:hover:after {
         max-width: 100% !important;
 
     }
-
+    #work-row{
+        padding-left:50px;
+        padding-right: 50px;
+    }
+    .work-hero{
+        width:100%;
+    }
     #hero-right {
         display: none;
     }
@@ -578,7 +649,16 @@ li span:hover:after {
         padding-left: 50px;
         ;
     }
-
+    #work-row{
+        padding-right: 0;
+        padding-left:30px;
+    }
+    .work-des h1{
+        text-align: center;
+    }
+    .work-read{
+        float: none;
+    }
     #logo {
         display: none;
         /* height: 65%;
