--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@
     box-shadow: 1px 1px 20px #00000025;
     cursor: pointer;
     transition: all 1s;
+    height: 100%;
 }
 #work-text{
     text-align: center;
@@ -709,6 +710,10 @@ li span:hover:after {
         height: 100vh;
         width: 100vw;
     }
+    .work-double-row{
+        padding-left: 50px;
+        padding-right: 50px;
+    }
 
 }
 
@@ -726,12 +731,16 @@ li span:hover:after {
     }
     .work-double-row{
         padding:30px 20px;
+        padding-bottom: 0;
     }
     .work-hero-card{
         width:100%;
         margin-bottom: 25px;
     }
-
+    #row-3{
+        margin-top: 0px;
+        padding:0 20px;
+    }
     #index-body {
         background: url('assets/img/mobile.png');
         background-size: cover;
