Fixed Major Bug

--- a/style.css
+++ b/style.css
@@ -710,10 +710,10 @@ li span:hover:after {
         height: 100vh;
         width: 100vw;
     }
-    .work-double-row{
+    /* .work-double-row{
         padding-left: 50px;
         padding-right: 50px;
-    }
+    } */
 
 }
 
