--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@
     padding-left: 135px;
     padding-right: 135px;
     width: 100vw;
+    padding-top:130px;
 }
 
 .work-hero {
@@ -117,6 +118,11 @@
 
 .work-hero-img {
     width: 100%;
+    border-radius: 10px;
+}
+
+.work-hero-img2 {
+    width: 75%;
     border-radius: 10px;
 }
 
@@ -567,11 +573,11 @@ label {
 }
 
 #logo {
-    margin-top: 5px;
-    height: 80%;
-    padding: 6px;
-    border: 4px solid #444;
-    border-radius: 50%;
+    margin-top: 130px;
+    margin-right: 200px;
+    height: 200px;
+    
+
 }
 
 /* .nav-items{
